# utzip

./: Cargo.toml  LICENSE  README.en.md  README.md
src/: cli.rs  error.rs  lib.rs  main.rs  zip.rs  zipsplit.rs
src/encryption/: mod.rs  zipcrypt.rs
src/utils/: common.rs  log.rs  logfile.rs  mod.rs
