[package]
name = "utzip"
version = "0.0.1"
edition = "2021"
description = "A ZIP file archiver written in Rust"
license = "GPL-2.0-or-later"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.32", features = ["derive"] }
regex = "1.11.1"
thiserror = "2.0.12"
env_logger = { version="0.11.6", features = ["color"]}
log = "0.4.25"
anyhow = "1.0.95"
rand = "0.9.0"
crc32fast = "1.4.2"
flate2 = "1.1.1"
bzip2 = "0.5.2"

[[bin]]
name = "utzip"
path = "src/main.rs"

[[bin]]
name = "utzipnote"
path = "src/bin/zipnote.rs"

[[bin]]
name = "utzipcloak"
path = "src/bin/zipcloak.rs"

[[bin]]
name = "utzipsplit"
path = "src/bin/zipsplit.rs"

